@@ -24,3 +24,4 @@ Changes in version 1.3.x
 + bugfix: subsampleCounts errors if no samples are found after subsampling
 + added loadFromMetaphlan
 + renamed calculateUniFrac to calculateUnifrac 
++ added na.rm option to getTopTaxa   
